# ocl-test

./: .gitignore  Cargo.toml  flake.nix
src/: kernel.cl  main.rs  most_common_nseq_kernel.rs  nseq_tokenizer.rs  train_llm.rs  train_nseq_tokenizer.rs  transformer.rs  util.rs
