[package]
name = "ocl-test"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
dialoguer = "0.11.0"
env_logger = "0.11.6"
indicatif = {version = "0.17.11", features = ["rayon"]}
lazy_static = "1.5.0"
log = "0.4.26"
ocl = "0.19.7"
polars = {version = "0.46.0", features = ["lazy", "parquet"]}
rayon = "1.10.0"
regex = "1.11.1"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
